# eka-mcp-sdk

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LOGGING.md  MANIFEST.in  README.md  READMEforwindows.md  TEST_IMPLEMENTATION_SUMMARY.md  TOOL_SELECTION_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_settings.py
.code.guide/: CLAUDE.md  LOGGING.md  README.md  TESTING_GUIDE.md  TEST_IMPLEMENTATION_SUMMARY.md  TOOL_SELECTION_GUIDE.md
eka_mcp_sdk/: __init__.py  lib.py  sdk.py  server.py
eka_mcp_sdk/auth/: __init__.py  manager.py  models.py  storage.py
eka_mcp_sdk/clients/: abha_client.py  base.py  base_client.py  base_emr_client.py  base_phr_client.py  client_factory.py  doctor_tools_client.py  eka_emr_client.py
eka_mcp_sdk/config/: settings.py
eka_mcp_sdk/core/: __init__.py  appointment_service.py
eka_mcp_sdk/knowledge_bases/: search_engine.py
eka_mcp_sdk/knowledge_bases/doctor_search_index/: .managed.json  build_master_csv.py  doctor_list.csv  hospital_list.csv  index_builder_v5.py  master_doctor_index.csv  meta.json  metadata.json  speciality_list.csv
eka_mcp_sdk/services/: __init__.py  abha_service.py  appointment_service.py  assessment_service.py  doctor_clinic_service.py  extra_service.py  patient_service.py  prescription_service.py
eka_mcp_sdk/tools/: abha_tools.py  appointment_tools.py  appointment_tools_backup.py  assessment_tools.py  doctor_clinic_tools.py  doctor_tools.py  extra_tools.py  models.py  patient_tools.py  prescription_tools.py  user_authentication_tools.py
eka_mcp_sdk/utils/: auth_schemas.py  book_appointment_utils.py  deduplicator.py  doctor_discovery_utils.py  eka_response_parsers.py  enrichment_helpers.py  fastmcp_helper.py  logger_utils.py  tool_registration.py  workspace_utils.py
examples/: MCP_USAGE.md  auth_usage.py  claude_desktop_config.json  crewai_usage.py  custom_headers_demo.py  direct_usage.py  docker-compose.yml
tests/: README.md  __init__.py  test_abha_client.py  test_abha_service.py  test_appointment_tools.py  test_extra_service.py  test_patient_tools.py
